add vercel conf

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -11,9 +11,12 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="//fdn.fontcdn.ir" />
+    <link rel="preconnect" href="//v1.fontapi.ir" />
+    <link href="https://v1.fontapi.ir/css/Yekan" rel="stylesheet" />
     <title>Music App</title>
   </head>
-  <body class="bg-gray-100 font-sans pb-12">
+  <body class="bg-gray-100 pb-12">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
